[tool.poetry]
name = "inf-daken-counter-obsw"
version = "2.0.12"
description = ""
authors = ["katao <k.katasan@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
PyAutoGUI = "^0.9.54"
pysimplegui = "^4.60.5"
numpy = "^1.24.3"
keyboard = "^0.13.5"
requests = "^2.31.0"
bs4 = "^0.0.1"
obsws-python = "^1.4.2"
imagehash = "^4.3.1"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
